--- a/api-chuyen-doi-tien-te.html
+++ b/api-chuyen-doi-tien-te.html
@@ -5,9 +5,9 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="author" content="WebTỷGiá">
-<meta name="description" content=" Giá vàng SJC, Doji, Ngọc Hải, Bảo Tín Minh Châu, Mi Hồng ">
+<meta name="description" content="Api Công cụ chuyển đổi qua lại tiền tệ ">
 <meta http-equiv="content-language" content="vi" />
-<title>  Giá vàng hôm nay - WebTỷGiá </title>
+<title> Api nhúng Công cụ chuyển đổi qua lại tiền tệ vào website - WebTỷGiá </title>
 <meta name="csrf-token" content="">
 
 </head>
