--- a/api-chuyen-doi-tien-te.html
+++ b/api-chuyen-doi-tien-te.html
@@ -13,5 +13,7 @@
 </head>
 <body>
 <iframe frameborder="0" height="600px" width="100%" src="https://webtygia.com/api/cong-cu-chuyen-doi-tien-te?maukhungketqua=009688&mauchuketqua=ffffff&sizechuketqua=13&fontsize=13&border=0&hienthamkhao=0&undefined"></iframe>
-</body>
+
+  <p>Bạn có thể thay đổi màu sắc, màu chữ, kích thước theo style của bạn, click <a href="https://webtygia.com/nhung-ty-gia-va-gia-vang-vao-website-cua-ban.html">đây</a> để lấy code</p>
+  </body>
 </html>
